--- a/src/main/resources/templates/month.html
+++ b/src/main/resources/templates/month.html
@@ -11,7 +11,6 @@
     <script src="webjars/bootstrap/5.2.0/js/bootstrap.min.js"></script>
 </head>
 <body class="text-bg-dark">
-
 <!--header-->
 <header class="py-2 px-4">
     <div>
@@ -25,26 +24,26 @@
     </div>
 </header>
 
-<main>
+<main class="w-75 mx-auto">
     <!--date picker-->
-    <div class="container">
+    <div class="d-flex mt-5 me-3 justify-content-end">
         <form method="get" th:action="@{/productivity/month}" th:object="${months}">
-            <div class="form-group row align-items-end">
-                <div class="col-md-4 mt-2">
+            <div class="row align-items-end">
+                <div class="col-sm-4 mt-2">
                     <label for="from">Date from</label>
                     <div class="input-group date">
                         <input type="date" class="form-control" id="from" autocomplete="off" th:name="from"/>
                     </div>
                 </div>
 
-                <div class="col-md-4 mt-2">
+                <div class="col-sm-4 mt-2">
                     <label for="to">Date to</label>
                     <div class="input-group date">
                         <input type="date" class="form-control" id="to" autocomplete="off" th:name="to"/>
                     </div>
                 </div>
 
-                <div class="col-md-2">
+                <div class="col-sm-2">
                     <button class="btn btn-primary" type="submit">Show</button>
                 </div>
 
@@ -53,24 +52,22 @@
     </div>
 
     <!--            months productivity table-->
-    <div class="mt-5 ms-5 me-5 card">
+    <div class="ms-5 me-5 mt-2 card">
         <div class="card-header text-black h4 text-center">Months productivity</div>
         <div class="card-body">
-
             <div class="table-responsive">
                 <table id="table" class="table table-striped table-sm">
                     <!--                    table headers-->
                     <thead>
-                    <tr>
-                        <th class="col-sm-3">Task</th>
-                        <th class="col-sm-3">Category</th>
+                    <tr class="h5">
+                        <th class="col-md-3">Task</th>
+                        <th class="col-md-3">Category</th>
 
-                        <div class="col-sm-4">
-                            <th th:each="number : ${#numbers.sequence(1, months.count)}"
-                                th:text="'Month ' + ${number}"></th>
-                            <th>Total</th>
+                        <div class="col-md-4">
+                            <th class="col-md-1" th:each="number : ${months.getSummary().getPeriodStats()}"
+                                th:text="${number.getKey()}"></th>
+                            <th class="col-md-1">Total</th>
                         </div>
-
                     </tr>
                     </thead>
                     <!--                    table body-->
@@ -102,13 +99,13 @@
             <div class="table-responsive text-black">
                 <table class="table table-striped table-sm">
                     <thead>
-                    <tr>
-                        <th class="col-sm-6"></th>
+                    <tr class="h5">
+                        <th class="col-md-6"></th>
 
-                        <div class="col-sm-4">
-                            <th th:each="number : ${#numbers.sequence(1, months.count)}"
-                                th:text="'Month ' + ${number}"></th>
-                            <th>Total</th>
+                        <div class="col-md-4">
+                            <th class="col-md-1" th:each="number : ${months.getSummary().getPeriodStats()}"
+                                th:text="${number.getKey()}"></th>
+                            <th class="col-md-1">Total</th>
                         </div>
 
                     </tr>
@@ -119,7 +116,7 @@
                             <p>Productive time</p>
                         </td>
                         <td th:each="stat : ${months.getSummary().getPeriodStats()}">
-                            <p th:text="${stat.getProductiveTime()}"></p>
+                            <p th:text="${stat.getValue().getProductiveTime()}"></p>
                         </td>
                         <td>
                             <p th:text="${months.getSummary().getTotalStats().getProductiveTime()}"></p>
@@ -131,7 +128,7 @@
                             <p>Total time</p>
                         </td>
                         <td th:each="stat : ${months.getSummary().getPeriodStats()}">
-                            <p th:text="${stat.getTotalTime()}"></p>
+                            <p th:text="${stat.getValue().getTotalTime()}"></p>
                         </td>
                         <td>
                             <p th:text="${months.getSummary().getTotalStats().getTotalTime()}"></p>
@@ -143,10 +140,10 @@
                             <p>Percentage</p>
                         </td>
                         <td th:each="stat : ${months.getSummary().getPeriodStats()}">
-                            <p th:text="${stat.getPercentage()}"></p>
+                            <p th:text="${stat.getValue().getPercentage()} + '%'"></p>
                         </td>
                         <td>
-                            <p th:text="${months.getSummary().getTotalStats().getPercentage()}"></p>
+                            <p th:text="${months.getSummary().getTotalStats().getPercentage()} + '%'"></p>
                         </td>
                     </tr>
                     </tbody>
@@ -157,13 +154,12 @@
 
 </main>
 <!--footer-->
-<footer class="py-3 text-center text-white-50">
+<footer class="text-center text-white-50">
     <div class="container">
         <p>Created by Michael <a href="https://www.t.me/FLlGHT" class="text-white">"flight"</a> Fedorenko</p>
     </div>
 </footer>
 
 <script src="/scripts/productivity.js"></script>
-
 </body>
 </html>
