--- a/src/main/resources/templates/week.html
+++ b/src/main/resources/templates/week.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en" class="h-100">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <title>SF</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Weekly</title>
 
     <link rel="stylesheet" href="/webjars/bootstrap/5.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
@@ -12,7 +11,6 @@
     <script src="webjars/bootstrap/5.2.0/js/bootstrap.min.js"></script>
 </head>
 <body class="text-bg-dark">
-
 <!--header-->
 <header class="py-2 px-4">
     <div>
@@ -26,28 +24,26 @@
     </div>
 </header>
 
-<main>
-
-<!--    date picker-->
-    <div class="container">
+<main class="w-75 mx-auto">
+    <!--date picker-->
+    <div class="d-flex mt-5 me-3 justify-content-end">
         <form method="get" th:action="@{/productivity/week}" th:object="${weeks}">
-            <div class="form-group row align-items-end">
-                <div class="col-md-4 mt-2">
+            <div class="row align-items-end">
+                <div class="col-sm-4 mt-2">
                     <label for="from">Date from</label>
                     <div class="input-group date">
                         <input type="date" class="form-control" id="from" autocomplete="off" th:name="from"/>
-
                     </div>
                 </div>
 
-                <div class="col-md-4 mt-2">
+                <div class="col-sm-4 mt-2">
                     <label for="to">Date to</label>
                     <div class="input-group date">
                         <input type="date" class="form-control" id="to" autocomplete="off" th:name="to"/>
                     </div>
                 </div>
 
-                <div class="col-md-2">
+                <div class="col-sm-2">
                     <button class="btn btn-primary" type="submit">Show</button>
                 </div>
 
@@ -55,129 +51,115 @@
         </form>
     </div>
 
-<!--    productive info-->
-    <div class="d-flex m-5 py-5">
-        <div class="сol col-md-9">
+    <!--            months productivity table-->
+    <div class="ms-5 me-5 mt-2 card">
+        <div class="card-header text-black h4 text-center">Weekly productivity</div>
+        <div class="card-body">
+            <div class="table-responsive">
+                <table id="table" class="table table-striped table-sm">
+                    <!--                    table headers-->
+                    <thead>
+                    <tr class="h5">
+                        <th class="col-md-3">Task</th>
+                        <th class="col-md-3">Category</th>
 
-<!--            weeks productivity table-->
-            <div class="card mx-auto">
-                <div class="card-header text-black h4 text-center">Weeks productivity</div>
-                <div class="card-body">
-                    <table id="table" class="table align-middle bg-white">
-                        <thead class="bg-light">
-                        <tr class="text-nowrap">
-                            <th>Task</th>
-                            <th>Category</th>
-                            <th th:each="i : ${#numbers.sequence(1, stats.getWeeksNumber())}"
-                                th:text="'Week ' + ${i}"></th>
-                            <th>Total</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr th:each="task : ${tasks}">
-                            <td>
-                                <div class="d-flex justify-content-start text-md-start">
-                                    <div class="col-sm-12">
-                                        <p class="fw-bold mb-1 text-nowrap" th:text="${task.name}"></p>
-                                    </div>
-                                </div>
-                            </td>
-                            <td>
-                                <p class="fw-normal mb-1 text-nowrap" th:text="${task.category}"></p>
-                            </td>
-                            <td th:each="i : ${#numbers.sequence(0, stats.getWeeksNumber() - 1)}">
-                                <p class="fw-normal" th:text="${task.timeByWeek[i]}"></p>
-                            </td>
-                            <td>
-                                <p class="fw-normal" th:text="${task.totalTime}"></p>
-                            </td>
-                        </tr>
-
-                        </tbody>
-                    </table>
-                </div>
+                        <div class="col-md-4">
+                            <th class="col-md-1" th:each="number : ${weeks.getSummary().getPeriodStats()}"
+                                th:text="${number.getKey()}"></th>
+                            <th class="col-md-1">Total</th>
+                        </div>
+                    </tr>
+                    </thead>
+                    <!--                    table body-->
+                    <tbody>
+                    <tr th:each="task : ${weeks.getTasks()}">
+                        <td>
+                            <p th:text="${task.getName()}"></p>
+                        </td>
+                        <td>
+                            <p th:text="${task.getCategory()}"></p>
+                        </td>
+                        <td th:each="time : ${task.getTimeByPeriod()}">
+                            <p th:text="${time}"></p>
+                        </td>
+                        <td>
+                            <p th:text="${task.getTotalTime()}"></p>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
-
-
-<!--            weeks stats-->
-            <div class="card mx-auto">
-                <div class="card-body">
-                    <table class="table align-middle bg-white">
-                        <thead class="bg-light">
-                        <tr class="text-nowrap">
-                            <th>Task</th>
-                            <th></th>
-                            <th th:each="i : ${#numbers.sequence(1, stats.getWeeksNumber())}"
-                                th:text="'Week ' + ${i}"></th>
-                            <th>Total</th>
-                        </tr>
-                        </thead>
-
-                        <tbody>
-                        <tr>
-                            <td class="col-sm-12">
-                                <p class="text-nowrap fw-bold ">Total time: </p>
-                            </td>
-                            <td>
-
-                            </td>
-                            <td th:each="i : ${#numbers.sequence(0, stats.getWeeksNumber() - 1)}">
-                                <p class="fw-normal" th:text="${stats.timeByWeek[i]}"></p>
-                            </td>
-                            <td>
-                                <p class="fw-normal" th:text="${stats.totalProductiveTime}"></p>
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td>
-                                <p class="text-nowrap fw-bold">Percentage: </p>
-                            </td>
-                            <td>
-
-                            </td>
-                            <td th:each="i : ${#numbers.sequence(0, stats.getWeeksNumber() - 1)}">
-                                <p class="fw-normal text-nowrap" th:text="${stats.percentageByWeek[i]} + '%'"></p>
-                            </td>
-                            <td>
-                                <p class="fw-normal text-nowrap" th:text="${stats.totalPercentage} + ' %'"></p>
-                            </td>
-                        </tr>
-
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-
 
         </div>
+    </div>
 
-<!--           weeks stats-->
-        <div class="col col-md-3">
-            <div class="card">
-                <div class="card-header text-black h4 text-center"> Month stats</div>
-                <div class="card-body">
-                    <p class="text-black" th:text="'Productive time: ' + ${stats.totalProductiveTime}"></p>
-                    <p class="text-black" th:text="'Total time: ' + ${stats.totalTime}"></p>
-                    <p class="text-black" th:text="'Productivity percentage: '+ ${stats.totalPercentage} + '%'"></p>
-                </div>
+    <!--    month productivity stats-->
+    <div class="ms-5 me-5 mt-1 card">
+        <div class="card-body">
+            <div class="table-responsive text-black">
+                <table class="table table-striped table-sm">
+                    <thead>
+                    <tr class="h5">
+                        <th class="col-md-6"></th>
+
+                        <div class="col-md-4">
+                            <th class="col-md-1" th:each="number : ${weeks.getSummary().getPeriodStats()}"
+                                th:text="${number.getKey()}"></th>
+                            <th class="col-md-1">Total</th>
+                        </div>
+
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>
+                            <p>Productive time</p>
+                        </td>
+                        <td th:each="stat : ${weeks.getSummary().getPeriodStats()}">
+                            <p th:text="${stat.getValue().getProductiveTime()}"></p>
+                        </td>
+                        <td>
+                            <p th:text="${weeks.getSummary().getTotalStats().getProductiveTime()}"></p>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            <p>Total time</p>
+                        </td>
+                        <td th:each="stat : ${weeks.getSummary().getPeriodStats()}">
+                            <p th:text="${stat.getValue().getTotalTime()}"></p>
+                        </td>
+                        <td>
+                            <p th:text="${weeks.getSummary().getTotalStats().getTotalTime()}"></p>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            <p>Percentage</p>
+                        </td>
+                        <td th:each="stat : ${weeks.getSummary().getPeriodStats()}">
+                            <p th:text="${stat.getValue().getPercentage()} + '%'"></p>
+                        </td>
+                        <td>
+                            <p th:text="${weeks.getSummary().getTotalStats().getPercentage()} + '%'"></p>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
 
 </main>
-
 <!--footer-->
-<footer class="py-3 text-center text-white-50">
+<footer class="text-center text-white-50">
     <div class="container">
-    <p>Created by Michael <a href="https://www.t.me/FLlGHT" class="text-white">"flight"</a> Fedorenko</p>
+        <p>Created by Michael <a href="https://www.t.me/FLlGHT" class="text-white">"flight"</a> Fedorenko</p>
     </div>
 </footer>
 
 <script src="/scripts/productivity.js"></script>
-<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-<script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
-<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-
 </body>
 </html>
