--- a/src/main/resources/templates/day.html
+++ b/src/main/resources/templates/day.html
@@ -1,10 +1,167 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <title>Daily</title>
 
+    <link rel="stylesheet" href="/webjars/bootstrap/5.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/style.css">
+
+    <script src="webjars/jquery/3.6.0/jquery.min.js"></script>
+    <script src="webjars/bootstrap/5.2.0/js/bootstrap.min.js"></script>
+</head>
+<body class="text-bg-dark">
+<!--header-->
+<header class="py-2 px-4">
+    <div>
+        <a class="float-md-start nav-link fw-bold py-1 px-0" href="/">Stay Focused</a>
+        <nav class="nav nav-masthead justify-content-center float-md-end">
+            <a class="nav-link fw-bold py-1 px-0"
+               href="/productivity/day">Daily Productivity</a>
+            <a class="nav-link fw-bold py-1 px-0" aria-current="page"
+               href="/productivity/week">Weekly productivity</a>
+            <a class="nav-link fw-bold py-1 px-0"
+               href="/productivity/month">Monthly productivity</a>
+        </nav>
+    </div>
+</header>
+
+<main class="w-75 mx-auto">
+    <!--date picker-->
+    <div class="d-flex mt-5 me-3 justify-content-end">
+        <form method="get" th:action="@{/productivity/day}" th:object="${days}">
+            <div class="row align-items-end">
+                <div class="col-sm-4 mt-2">
+                    <label for="from">Date from</label>
+                    <div class="input-group date">
+                        <input type="date" class="form-control" id="from" autocomplete="off" th:name="from"/>
+                    </div>
+                </div>
+
+                <div class="col-sm-4 mt-2">
+                    <label for="to">Date to</label>
+                    <div class="input-group date">
+                        <input type="date" class="form-control" id="to" autocomplete="off" th:name="to"/>
+                    </div>
+                </div>
+
+                <div class="col-sm-2">
+                    <button class="btn btn-primary" type="submit">Show</button>
+                </div>
+
+            </div>
+        </form>
+    </div>
+
+    <!--            months productivity table-->
+    <div class="ms-5 me-5 mt-2 card">
+        <div class="card-header text-black h4 text-center">Daily productivity</div>
+        <div class="card-body">
+            <div class="table-responsive">
+                <table id="table" class="table table-striped table-sm">
+                    <!--                    table headers-->
+                    <thead>
+                    <tr class="h5">
+                        <th class="col-md-3">Task</th>
+                        <th class="col-md-3">Category</th>
+
+                        <div class="col-md-4">
+                            <th class="col-md-1" th:each="number : ${days.getSummary().getPeriodStats()}"
+                                th:text="${number.getKey()}"></th>
+                            <th class="col-md-1">Total</th>
+                        </div>
+                    </tr>
+                    </thead>
+                    <!--                    table body-->
+                    <tbody>
+                    <tr th:each="task : ${days.getTasks()}">
+                        <td>
+                            <p th:text="${task.getName()}"></p>
+                        </td>
+                        <td>
+                            <p th:text="${task.getCategory()}"></p>
+                        </td>
+                        <td th:each="time : ${task.getTimeByPeriod()}">
+                            <p th:text="${time}"></p>
+                        </td>
+                        <td>
+                            <p th:text="${task.getTotalTime()}"></p>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+
+        </div>
+    </div>
+
+    <!--    month productivity stats-->
+    <div class="ms-5 me-5 mt-1 card">
+        <div class="card-body">
+            <div class="table-responsive text-black">
+                <table class="table table-striped table-sm">
+                    <thead>
+                    <tr class="h5">
+                        <th class="col-md-6"></th>
+
+                        <div class="col-md-4">
+                            <th class="col-md-1" th:each="number : ${days.getSummary().getPeriodStats()}"
+                                th:text="${number.getKey()}"></th>
+                            <th class="col-md-1">Total</th>
+                        </div>
+
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>
+                            <p>Productive time</p>
+                        </td>
+                        <td th:each="stat : ${days.getSummary().getPeriodStats()}">
+                            <p th:text="${stat.getValue().getProductiveTime()}"></p>
+                        </td>
+                        <td>
+                            <p th:text="${days.getSummary().getTotalStats().getProductiveTime()}"></p>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            <p>Total time</p>
+                        </td>
+                        <td th:each="stat : ${days.getSummary().getPeriodStats()}">
+                            <p th:text="${stat.getValue().getTotalTime()}"></p>
+                        </td>
+                        <td>
+                            <p th:text="${days.getSummary().getTotalStats().getTotalTime()}"></p>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            <p>Percentage</p>
+                        </td>
+                        <td th:each="stat : ${days.getSummary().getPeriodStats()}">
+                            <p th:text="${stat.getValue().getPercentage()} + '%'"></p>
+                        </td>
+                        <td>
+                            <p th:text="${days.getSummary().getTotalStats().getPercentage()} + '%'"></p>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+</main>
+<!--footer-->
+<footer class="text-center text-white-50">
+    <div class="container">
+        <p>Created by Michael <a href="https://www.t.me/FLlGHT" class="text-white">"flight"</a> Fedorenko</p>
+    </div>
+</footer>
+
+<script src="/scripts/productivity.js"></script>
 </body>
 </html>
