--- a/src/main/resources/templates/main-page.html
+++ b/src/main/resources/templates/main-page.html
@@ -18,10 +18,12 @@
         <div>
             <h3 class="float-md-start mb-0">Stay Focused</h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
-                <a class="nav-link fw-bold py-1 px-0" aria-current="page"
-                   href="/productivity/week">Weekly productivity</a>
                 <a class="nav-link fw-bold py-1 px-0"
-                   href="/productivity/month">Monthly productivity</a>
+                   href="/productivity/day">Daily</a>
+                <a class="nav-link fw-bold py-1 px-0" aria-current="page"
+                   href="/productivity/week">Weekly</a>
+                <a class="nav-link fw-bold py-1 px-0"
+                   href="/productivity/month">Monthly</a>
             </nav>
         </div>
     </header>
