--- a/src/main/resources/templates/week.html
+++ b/src/main/resources/templates/week.html
@@ -16,6 +16,8 @@
     <div>
         <a class="float-md-start nav-link fw-bold py-1 px-0" href="/">Stay Focused</a>
         <nav class="nav nav-masthead justify-content-center float-md-end">
+            <a class="nav-link fw-bold py-1 px-0"
+               href="/productivity/day">Daily Productivity</a>
             <a class="nav-link fw-bold py-1 px-0" aria-current="page"
                href="/productivity/week">Weekly productivity</a>
             <a class="nav-link fw-bold py-1 px-0"
